<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ScrollingActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MaterialComponents.NoActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="155dp"
            app:expandedTitleMarginBottom="70dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">
            <ImageView
                android:contentDescription="@string/title_activity_scrolling"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/schoolimage"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ProfileImage"
                android:clickable="true"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                android:layout_marginTop="8dp"
                android:layout_height="87dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/Todaystring" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studentname"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="18sp"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/major"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="14sp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studentID"
                android:textStyle="normal"
                android:textAlignment="center"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/today"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
               />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Class"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lastsemester"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/math"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/php"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projectanalysis"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oracle"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>