<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:theme="@style/Custom5forprofile">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            app:expandedTitleMarginTop="125dp"
            app:titleEnabled="true"
            app:expandedTitleGravity="center"
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="254dp"
            app:title="222"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:collapsedTitleTextAppearance="@style/Widget.MaterialComponents.TabLayout.Colored"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">
            <ImageView
                android:contentDescription="@string/title_activity_scrolling"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/profilecover"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:background="@color/colorWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/colorWhite">
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardBackgroundColor="@color/colorWhite">

               <ImageButton
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:src="@drawable/profile"
                   android:background="@color/full_transparent"
                   android:foreground="?attr/selectableItemBackground"
                   android:layout_marginLeft="150dp"
                   android:layout_marginRight="150dp"
                   android:layout_gravity="center|top"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/studentname"
                   android:layout_marginTop="120dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:textAlignment="center"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/major"
                   android:layout_marginTop="150dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:textAlignment="center"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/studentID"
                   android:layout_marginTop="180dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:textAlignment="center"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/lastsemester"
                   android:layout_marginTop="230dp"
                   android:textSize="17sp"
                   android:textStyle="bold"
                   android:textColor="@color/colorDark"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"/>
               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="260dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:src="@drawable/border_bottom"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/math"
                   android:layout_marginTop="270dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/web"
                   android:layout_marginTop="310dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/php"
                   android:layout_marginTop="350dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/projectanalysis"
                   android:layout_marginTop="390dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/oracle"
                   android:layout_marginTop="430dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:text="@string/android"
                   android:layout_marginTop="470dp"
                   android:textSize="17sp"
                   android:paddingTop="4dp"
                   android:paddingLeft="10dp"
                   android:paddingRight="10dp"/>

            <Button
                android:background="@drawable/customroundcornerfor_popup"
                android:text="@string/semesterbtn"
                android:textColor="@color/colorWhite"
                android:foreground="?attr/selectableItemBackground"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="520dp"
                android:layout_width="166dp"
                android:layout_height="42dp"
                android:id="@+id/btnsemester"/>


           </androidx.cardview.widget.CardView>

       </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
