<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customColor2"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/backarrow"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="320dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="175dp"
        android:paddingLeft="20dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="125dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="275dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:foreground="?attr/selectableItemBackground"/>
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="325dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:foreground="?attr/selectableItemBackground"/>
    <EditText
        android:id="@+id/txt_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="375dp"
        android:hint="@string/phonenumber"
        android:textColor="@color/colorWhite"
        android:inputType="phone"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:foreground="?attr/selectableItemBackground"/>
    <Button
        android:id="@+id/buttonsignup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="450dp"
        android:text="@string/signuptext"
        android:background="@drawable/customborder"
        android:foreground="?attr/selectableItemBackground"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
