<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customColor2">


    <EditText
        android:id="@+id/txt_name"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:foreground="@drawable/responseclick"
        android:hint="@string/username"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:foreground="@drawable/responseclick"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <EditText
        android:id="@+id/txt_phonenumber"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:hint="@string/phonenumber"
        android:textColorHint="#FFFFFF"
        android:foreground="@drawable/responseclick"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:foreground="@drawable/responseclick"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/logo2" />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/backarrow"
        android:foreground="@drawable/responseclick"
        android:onClick="onBackPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonback">

    </TextView>

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="332dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/customborder"
        android:foreground="@drawable/responseclick"
        android:text="@string/signuptext"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phonenumber" />

</androidx.constraintlayout.widget.ConstraintLayout>
